<resources>
    <string name="app_name">SmartKey</string>
    <string name="inregistrare1stPg">Register</string>
    <string name="login1stPg">Login with finger-print</string>
    <string name="canAuth">You can use fingerprint to login</string>
    <string name="errAuth1">Your device doesn`t have a fingerprint senzor</string>
    <string name="errAuth2">Your sensor is currently unavaibable</string>
    <string name="errAuth3">Your device doesn`t have any fingerprint saved, please save one</string>
    <string name="login1stpgwithacc">Login with account</string>s
    <string name="registerErrorMsg1">All fields must be filled</string>
    <string name="registerErrorMsg2">Enter a valid email</string>
    <string name="registerErrorMsg3">Your passwords don`t match!</string>
    <string name="registerErrorMsg4">Please choose another email. This email adress is already used!</string>
    <string name="dbError">Database connection error!</string>
    <string name="loginError">Email or password is incorrect</string>
    <string name="emailHint">exemple@exmeple.ex</string>
    <string name="passwordHint">********</string>
    <string name="register_enter_your_firstname">Enter your firstname:</string>
    <string name="register_enter_your_lastname">Enter your lastname:</string>
    <string name="register_enter_your_email_adress">Enter your email adress:</string>
    <string name="register_enter_your_password">Enter your password:</string>
    <string name="register_re_enter_your_password">Re-enter your password:</string>
    <string name="login">Login</string>
    <string name="add_car">Add car</string>
    <string name="show_paired_devices_to_connect_to_car">Show paired cars to connect</string>
    <string name="enter_car_s_license_plate">Enter car`s license plate:</string>
    <string name="enter_car_s_brand">Enter car`s brand:</string>
    <string name="enter_car_s_model">Enter car`s model:</string>
    <string name="enter_car_s_fabrication_year">Enter car`s fabrication year:</string>
    <string name="last_kilometers_number_when_you_changed_engine_oil">Last kilometers number when you changed engine oil:</string>
    <string name="last_kilometers_number_when_you_changed_braking_pads">Last kilometers number when you changed braking pads:</string>
    <string name="enter_id_of_bluetooth_module">Enter id of bluetooth module:</string>
    <string name="get_car_info">Get car info</string>
    <string name="error_history">Error History</string>
    <string name="p1192">Fuel pressure sensor - supply voltage</string>
    <string name="p1193">Fuel pressure sensor - open / short to positive</string>
    <string name="p1194">Fuel pressure control valve - short to positive</string>
    <string name="p1195">Fuel pressure control valve - open / short to ground</string>
    <string name="p1249">Fuel consumption system - circuit failure</string>
    <string name="p1298">Engine Coolant Temperature (ECT) Sensor - Blurred Signal</string>
    <string name="p1009">\"1/2 Air Flow Sensor (MAF) Sensor - Blurred Load Detection Signal \"</string>
    <string name="p1552">Barometric pressure sensor (BARO) - open / short to ground</string>
    <string name="p1160">Intake air temperature (IAT) sensor - short to ground</string>
    <string name="p1396">Toothless motor speed (RPM) sensor</string>
    <string name="p1147">Engine Coolant Temperature (ECT) Sensor(s)</string>
    <string name="p1148">Intake Air Temperature Sensor(s) (IAT)</string>
    <string name="p1146">Air Flow Sensor(s)</string>
    <string name="p1335">Engine speed sensor (RPM)</string>
    <string name="p1542">Accelerator Pedal Position Sensor (APP)</string>
    <string name="p1342">Gearbox Shaft Position Box (CMP)</string>
    <string name="p1411">Secondary Air Injection System (AIR)</string>
    <string name="p15551">AIC compressor clutch lock</string>
    <string name="p1700">Switching transmission</string>
    <string name="p1912">Gear control lever control mode, remote switch - implausible signal</string>
    <string name="change_oil_kilometers">Change engine oil km</string>
    <string name="show_error_history">Show error history</string>
    <string-array name="names"/>

</resources>